--- a/intro-to-pytorch/Part 6 - Saving and Loading Models.ipynb
+++ b/intro-to-pytorch/Part 6 - Saving and Loading Models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,9 +106,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1/2..  Training Loss: 1.705..  Test Loss: 0.990..  Test Accuracy: 0.638\n",
+      "Epoch: 1/2..  Training Loss: 1.019..  Test Loss: 0.777..  Test Accuracy: 0.692\n",
+      "Epoch: 1/2..  Training Loss: 0.863..  Test Loss: 0.684..  Test Accuracy: 0.740\n",
+      "Epoch: 1/2..  Training Loss: 0.761..  Test Loss: 0.637..  Test Accuracy: 0.750\n",
+      "Epoch: 1/2..  Training Loss: 0.766..  Test Loss: 0.600..  Test Accuracy: 0.780\n",
+      "Epoch: 1/2..  Training Loss: 0.691..  Test Loss: 0.625..  Test Accuracy: 0.769\n",
+      "Epoch: 1/2..  Training Loss: 0.715..  Test Loss: 0.567..  Test Accuracy: 0.787\n",
+      "Epoch: 1/2..  Training Loss: 0.660..  Test Loss: 0.575..  Test Accuracy: 0.783\n",
+      "Epoch: 1/2..  Training Loss: 0.654..  Test Loss: 0.552..  Test Accuracy: 0.791\n",
+      "Epoch: 1/2..  Training Loss: 0.675..  Test Loss: 0.536..  Test Accuracy: 0.803\n",
+      "Epoch: 1/2..  Training Loss: 0.631..  Test Loss: 0.542..  Test Accuracy: 0.797\n",
+      "Epoch: 1/2..  Training Loss: 0.652..  Test Loss: 0.525..  Test Accuracy: 0.803\n",
+      "Epoch: 1/2..  Training Loss: 0.586..  Test Loss: 0.522..  Test Accuracy: 0.804\n",
+      "Epoch: 1/2..  Training Loss: 0.647..  Test Loss: 0.513..  Test Accuracy: 0.804\n",
+      "Epoch: 1/2..  Training Loss: 0.610..  Test Loss: 0.492..  Test Accuracy: 0.816\n",
+      "Epoch: 1/2..  Training Loss: 0.625..  Test Loss: 0.506..  Test Accuracy: 0.811\n",
+      "Epoch: 1/2..  Training Loss: 0.597..  Test Loss: 0.483..  Test Accuracy: 0.822\n",
+      "Epoch: 1/2..  Training Loss: 0.586..  Test Loss: 0.494..  Test Accuracy: 0.823\n",
+      "Epoch: 1/2..  Training Loss: 0.570..  Test Loss: 0.496..  Test Accuracy: 0.820\n",
+      "Epoch: 1/2..  Training Loss: 0.542..  Test Loss: 0.494..  Test Accuracy: 0.821\n",
+      "Epoch: 1/2..  Training Loss: 0.582..  Test Loss: 0.502..  Test Accuracy: 0.819\n",
+      "Epoch: 1/2..  Training Loss: 0.536..  Test Loss: 0.514..  Test Accuracy: 0.810\n",
+      "Epoch: 1/2..  Training Loss: 0.590..  Test Loss: 0.483..  Test Accuracy: 0.825\n",
+      "Epoch: 2/2..  Training Loss: 0.569..  Test Loss: 0.490..  Test Accuracy: 0.821\n",
+      "Epoch: 2/2..  Training Loss: 0.565..  Test Loss: 0.468..  Test Accuracy: 0.829\n",
+      "Epoch: 2/2..  Training Loss: 0.531..  Test Loss: 0.462..  Test Accuracy: 0.831\n",
+      "Epoch: 2/2..  Training Loss: 0.567..  Test Loss: 0.471..  Test Accuracy: 0.826\n",
+      "Epoch: 2/2..  Training Loss: 0.533..  Test Loss: 0.457..  Test Accuracy: 0.833\n",
+      "Epoch: 2/2..  Training Loss: 0.546..  Test Loss: 0.478..  Test Accuracy: 0.825\n",
+      "Epoch: 2/2..  Training Loss: 0.559..  Test Loss: 0.457..  Test Accuracy: 0.837\n",
+      "Epoch: 2/2..  Training Loss: 0.528..  Test Loss: 0.471..  Test Accuracy: 0.828\n",
+      "Epoch: 2/2..  Training Loss: 0.552..  Test Loss: 0.459..  Test Accuracy: 0.830\n",
+      "Epoch: 2/2..  Training Loss: 0.539..  Test Loss: 0.471..  Test Accuracy: 0.827\n",
+      "Epoch: 2/2..  Training Loss: 0.543..  Test Loss: 0.461..  Test Accuracy: 0.827\n",
+      "Epoch: 2/2..  Training Loss: 0.520..  Test Loss: 0.459..  Test Accuracy: 0.833\n",
+      "Epoch: 2/2..  Training Loss: 0.572..  Test Loss: 0.461..  Test Accuracy: 0.832\n",
+      "Epoch: 2/2..  Training Loss: 0.519..  Test Loss: 0.455..  Test Accuracy: 0.836\n",
+      "Epoch: 2/2..  Training Loss: 0.488..  Test Loss: 0.448..  Test Accuracy: 0.839\n",
+      "Epoch: 2/2..  Training Loss: 0.503..  Test Loss: 0.451..  Test Accuracy: 0.837\n",
+      "Epoch: 2/2..  Training Loss: 0.534..  Test Loss: 0.443..  Test Accuracy: 0.837\n",
+      "Epoch: 2/2..  Training Loss: 0.530..  Test Loss: 0.442..  Test Accuracy: 0.837\n",
+      "Epoch: 2/2..  Training Loss: 0.516..  Test Loss: 0.446..  Test Accuracy: 0.837\n",
+      "Epoch: 2/2..  Training Loss: 0.566..  Test Loss: 0.451..  Test Accuracy: 0.837\n",
+      "Epoch: 2/2..  Training Loss: 0.501..  Test Loss: 0.437..  Test Accuracy: 0.845\n",
+      "Epoch: 2/2..  Training Loss: 0.502..  Test Loss: 0.453..  Test Accuracy: 0.836\n",
+      "Epoch: 2/2..  Training Loss: 0.509..  Test Loss: 0.447..  Test Accuracy: 0.840\n"
+     ]
+    }
+   ],
    "source": [
     "fc_model.train(model, trainloader, testloader, criterion, optimizer, epochs=2)"
    ]
@@ -126,9 +179,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our model: \n",
+      "\n",
+      " Network(\n",
+      "  (hidden_layers): ModuleList(\n",
+      "    (0): Linear(in_features=784, out_features=512, bias=True)\n",
+      "    (1): Linear(in_features=512, out_features=256, bias=True)\n",
+      "    (2): Linear(in_features=256, out_features=128, bias=True)\n",
+      "  )\n",
+      "  (output): Linear(in_features=128, out_features=10, bias=True)\n",
+      "  (dropout): Dropout(p=0.5, inplace=False)\n",
+      ") \n",
+      "\n",
+      "The state dict keys: \n",
+      "\n",
+      " odict_keys(['hidden_layers.0.weight', 'hidden_layers.0.bias', 'hidden_layers.1.weight', 'hidden_layers.1.bias', 'hidden_layers.2.weight', 'hidden_layers.2.bias', 'output.weight', 'output.bias'])\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Our model: \\n\\n\", model, '\\n')\n",
     "print(\"The state dict keys: \\n\\n\", model.state_dict().keys())"
@@ -143,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odict_keys(['hidden_layers.0.weight', 'hidden_layers.0.bias', 'hidden_layers.1.weight', 'hidden_layers.1.bias', 'hidden_layers.2.weight', 'hidden_layers.2.bias', 'output.weight', 'output.bias'])\n"
+     ]
+    }
+   ],
    "source": [
     "state_dict = torch.load('checkpoint.pth')\n",
     "print(state_dict.keys())"
@@ -176,9 +259,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.load_state_dict(state_dict)"
    ]
@@ -192,9 +286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error(s) in loading state_dict for Network:\n\tsize mismatch for hidden_layers.0.weight: copying a param with shape torch.Size([512, 784]) from checkpoint, the shape in current model is torch.Size([400, 784]).\n\tsize mismatch for hidden_layers.0.bias: copying a param with shape torch.Size([512]) from checkpoint, the shape in current model is torch.Size([400]).\n\tsize mismatch for hidden_layers.1.weight: copying a param with shape torch.Size([256, 512]) from checkpoint, the shape in current model is torch.Size([200, 400]).\n\tsize mismatch for hidden_layers.1.bias: copying a param with shape torch.Size([256]) from checkpoint, the shape in current model is torch.Size([200]).\n\tsize mismatch for hidden_layers.2.weight: copying a param with shape torch.Size([128, 256]) from checkpoint, the shape in current model is torch.Size([100, 200]).\n\tsize mismatch for hidden_layers.2.bias: copying a param with shape torch.Size([128]) from checkpoint, the shape in current model is torch.Size([100]).\n\tsize mismatch for output.weight: copying a param with shape torch.Size([10, 128]) from checkpoint, the shape in current model is torch.Size([10, 100]).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-d859c59ebec0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfc_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mNetwork\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m784\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m400\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m200\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# This will throw an error because the tensor sizes are wrong!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mE:\\Users\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\module.py\u001b[0m in \u001b[0;36mload_state_dict\u001b[1;34m(self, state_dict, strict)\u001b[0m\n\u001b[0;32m   1049\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1050\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror_msgs\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1051\u001b[1;33m             raise RuntimeError('Error(s) in loading state_dict for {}:\\n\\t{}'.format(\n\u001b[0m\u001b[0;32m   1052\u001b[0m                                self.__class__.__name__, \"\\n\\t\".join(error_msgs)))\n\u001b[0;32m   1053\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0m_IncompatibleKeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmissing_keys\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0munexpected_keys\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for Network:\n\tsize mismatch for hidden_layers.0.weight: copying a param with shape torch.Size([512, 784]) from checkpoint, the shape in current model is torch.Size([400, 784]).\n\tsize mismatch for hidden_layers.0.bias: copying a param with shape torch.Size([512]) from checkpoint, the shape in current model is torch.Size([400]).\n\tsize mismatch for hidden_layers.1.weight: copying a param with shape torch.Size([256, 512]) from checkpoint, the shape in current model is torch.Size([200, 400]).\n\tsize mismatch for hidden_layers.1.bias: copying a param with shape torch.Size([256]) from checkpoint, the shape in current model is torch.Size([200]).\n\tsize mismatch for hidden_layers.2.weight: copying a param with shape torch.Size([128, 256]) from checkpoint, the shape in current model is torch.Size([100, 200]).\n\tsize mismatch for hidden_layers.2.bias: copying a param with shape torch.Size([128]) from checkpoint, the shape in current model is torch.Size([100]).\n\tsize mismatch for output.weight: copying a param with shape torch.Size([10, 128]) from checkpoint, the shape in current model is torch.Size([10, 100])."
+     ]
+    }
+   ],
    "source": [
     "# Try this\n",
     "model = fc_model.Network(784, 10, [400, 200, 100])\n",
@@ -211,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,13 +355,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Network(\n",
+      "  (hidden_layers): ModuleList(\n",
+      "    (0): Linear(in_features=784, out_features=400, bias=True)\n",
+      "    (1): Linear(in_features=400, out_features=200, bias=True)\n",
+      "    (2): Linear(in_features=200, out_features=100, bias=True)\n",
+      "  )\n",
+      "  (output): Linear(in_features=100, out_features=10, bias=True)\n",
+      "  (dropout): Dropout(p=0.5, inplace=False)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "model = load_checkpoint('checkpoint.pth')\n",
     "print(model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -273,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
